.jjconflict-base-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__modules__aliased_unqualified_fn_call.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "import rocket_ship.{launch as boom_time}\npub fn go() { boom_time() }\n"
---
let
  rocket_ship' = builtins.import ./../rocket_ship.nix;
  boom_time = (builtins.import ./../rocket_ship.nix).launch;
  
  go = { }: boom_time { };
in
{ inherit go; }
