.jjconflict-base-0/compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__modules__unqualified_fn_call.snap
---
source: compiler-core/src/nix/tests/modules.rs
expression: "import rocket_ship.{launch}\npub fn go() { launch() }\n"
---
let
  rocket_ship' = builtins.import ./../rocket_ship.nix;
  inherit (builtins.import ./../rocket_ship.nix) launch;
  
  go = { }: launch { };
in
{ inherit go; }
